[gd_scene load_steps=3 format=2]

[ext_resource path="res://galgame/assets/art/ui/sqscrmask.png" type="Texture" id=1]
[ext_resource path="res://galgame/scenes/ui/system_panel.gd" type="Script" id=2]

[node name="system_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.231373 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="TextureRect" parent="."]
self_modulate = Color( 0.298039, 0.298039, 0.298039, 0.545098 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -556.0
margin_top = -331.0
margin_right = 555.0
margin_bottom = 332.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Button" parent="panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -274.807
margin_top = -72.3202
margin_right = -11.8069
margin_bottom = -12.3202
text = "返回标题"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -274.807
margin_top = -134.948
margin_right = -11.8069
margin_bottom = -74.948
text = "继续游戏"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -365.5
margin_top = -257.427
margin_right = 364.5
margin_bottom = 64.5734
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sub_container" type="HBoxContainer" parent="panel/container"]
margin_top = 69.0
margin_right = 730.0
margin_bottom = 97.0
alignment = 1

[node name="Label" type="Label" parent="panel/container/sub_container"]
margin_right = 76.0
margin_bottom = 28.0
rect_min_size = Vector2( 76, 28 )
size_flags_horizontal = 0
text = "语速"
align = 1
valign = 1

[node name="text_speed_slider" type="HSlider" parent="panel/container/sub_container"]
margin_left = 80.0
margin_top = 6.0
margin_right = 730.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 1.0
step = 0.1
value = 1.0

[node name="sub_container2" type="HBoxContainer" parent="panel/container"]
margin_top = 147.0
margin_right = 730.0
margin_bottom = 175.0
alignment = 1

[node name="Label" type="Label" parent="panel/container/sub_container2"]
margin_right = 76.0
margin_bottom = 28.0
rect_min_size = Vector2( 76, 28 )
size_flags_horizontal = 0
text = "音乐"
align = 1
valign = 1

[node name="bgm_slider" type="HSlider" parent="panel/container/sub_container2"]
margin_left = 80.0
margin_top = 6.0
margin_right = 730.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
step = 3.0

[node name="sub_container3" type="HBoxContainer" parent="panel/container"]
margin_top = 225.0
margin_right = 730.0
margin_bottom = 253.0
alignment = 1

[node name="Label" type="Label" parent="panel/container/sub_container3"]
margin_right = 76.0
margin_bottom = 28.0
rect_min_size = Vector2( 76, 28 )
size_flags_horizontal = 0
text = "语音"
align = 1
valign = 1

[node name="voice_slider" type="HSlider" parent="panel/container/sub_container3"]
margin_left = 80.0
margin_top = 6.0
margin_right = 730.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
step = 3.0

[connection signal="pressed" from="panel/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="panel/resume" to="." method="_on_resume_pressed"]
[connection signal="value_changed" from="panel/container/sub_container/text_speed_slider" to="." method="_on_text_speed_slider_value_changed"]
[connection signal="value_changed" from="panel/container/sub_container2/bgm_slider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="value_changed" from="panel/container/sub_container3/voice_slider" to="." method="_on_voice_slider_value_changed"]
